# Autonomous-drone-navigation-and-object-recognition

./: README.md
launch/: drone_launch.py
src/orb_slam2_ros/: CMakeLists.txt  package.xml
src/orb_slam2_ros/src/: orb_slam2_node.cpp
src/pid_controller_ros/: CMakeLists.txt  package.xml
src/pid_controller_ros/src/: pid_controller_node.cpp
src/yolo_ros/: CMakeLists.txt  package.xml
src/yolo_ros/src/: yolo_node.cpp
worlds/: orchard.world
