<?xml version="1.0"?>
<package format="2">
  <name>pid_controller_ros</name>
  <version>0.0.1</version>
  <description>PID Controller for ROS2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
</package>
