<?xml version="1.0"?>
<package format="2">
  <name>yolo_ros</name>
  <version>0.0.1</version>
  <description>YOLO integration with ROS2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
</package>
